--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,44 @@
+.Menu {
+    color: black;
+}
+
+body {
+    background-color: #ADB5BD;
+}
+
+.not-found {
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  font-size: 30px;
+}
+
+.not-found link{
+  color: #0070f3;
+  text-decoration: underline;
+}
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+  --shadow-color: 0deg 0% 26%;
+  --shadow-elevation-low:
+    0.8px 0.9px 1.2px hsl(var(--shadow-color) / 0.6),
+    1.3px 1.4px 1.9px -1.7px hsl(var(--shadow-color) / 0.49),
+    3.5px 3.9px 5.1px -3.5px hsl(var(--shadow-color) / 0.37);
+  --shadow-elevation-medium:
+    0.8px 0.9px 1.2px hsl(var(--shadow-color) / 0.63),
+    2.2px 2.5px 3.2px -1.2px hsl(var(--shadow-color) / 0.54),
+    6.6px 7.4px 9.7px -2.3px hsl(var(--shadow-color) / 0.45),
+    17.5px 19.7px 25.7px -3.5px hsl(var(--shadow-color) / 0.36);
+  --shadow-elevation-high:
+    0.8px 0.9px 1.2px hsl(var(--shadow-color) / 0.67),
+    4.2px 4.8px 6.2px -0.6px hsl(var(--shadow-color) / 0.61),
+    9.2px 10.3px 13.5px -1.2px hsl(var(--shadow-color) / 0.56),
+    18.2px 20.4px 26.7px -1.7px hsl(var(--shadow-color) / 0.51),
+    34.1px 38.3px 50px -2.3px hsl(var(--shadow-color) / 0.45),
+    59.5px 66.7px 87.1px -2.9px hsl(var(--shadow-color) / 0.4),
+    97.1px 108.9px 142.3px -3.5px hsl(var(--shadow-color) / 0.34);
 }
