--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -26,14 +26,67 @@
   text-decoration: underline;
 }
 
-.text {
-  display: inline-block;
+.title {
   position: relative;
-  z-index: 2;
-  min-height: 100vh;
+  border-radius: 30px;
+  max-width: 500px;
+  max-height: 500px;
+  top: -200px;
+  left: 400px;
+}
+.title p {
+  position: relative;
+  top: 100px;
+  right: 133px;
   text-align: center;
   font-family: 'Roboto', sans-serif;
-  font-size: 30px;
-  max-width: 1000px;
-  margin: 50 auto;
+  font-size: 20px;
+}
+
+.title h1{
+  font-family: 'Roboto', sans-serif;
+  font-size: 50px;
+  text-align: center;
+  position: relative;
+  min-height: 100vh;
+  max-width: 2000px;
+  top: 80px;
+  right: 63px;
+  text-decoration: underline;
+  text-decoration-color: rgb(120, 120, 215);
+
+}
+
+
+.image {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  bottom: 1000px;
+  left: 500px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.description {
+  display: inline;
+  position: relative;
+  top: -800px;
+  left: 30px;
+  height: 100%;
+  border-radius: 10px;
+  font-size: 50px;
+  overflow: hidden;
+  z-index: 99;
+}
+
+.description p {
+  position: relative;
+  align-items: center;
+  top: 100px;
+  right: 230px;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  font-size: 50px;
+  min-width: 1200px;
 }
