--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -69,27 +69,19 @@
 }
 
 .description {
-  display: inline;
+  display: inline-block;
   position: relative;
+  align-items: center ;
   top: -800px;
-  left: 30px;
-  height: 100%;
-  border-radius: 10px;
-  font-size: 50px;
-  overflow: hidden;
-  z-index: 99;
+  left: 25%;
+  font-family: 'Roboto', sans-serif;
+  min-width: 800px;
 }
 
 .description p {
-  display: inline-block;
-  position: relative;
-  align-items: center;
-  top: 100px;
-  right: 230px;
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
-  font-size: 50px;
-  min-width: 1200px;
+
+  font-size: 40px;
+
 }
 
 .skills {
