--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -26,6 +26,13 @@
   text-decoration: underline;
 }
 
+.page_container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 .title {
   position: relative;
   border-radius: 30px;
@@ -36,7 +43,7 @@
 }
 .title p {
   position: relative;
-  top: 100px;
+  top: 340px;
   right: 133px;
   text-align: center;
   font-family: 'Roboto', sans-serif;
@@ -50,7 +57,7 @@
   position: relative;
   min-height: 100vh;
   max-width: 2000px;
-  top: 80px;
+  top: 325px;
   right: 63px;
   text-decoration: underline;
   text-decoration-color: rgb(120, 120, 215);
@@ -62,14 +69,13 @@
   position: relative;
   width: 100%;
   height: 100%;
-  bottom: 1000px;
+  top: -800px;
   left: 500px;
   border-radius: 10px;
-  overflow: hidden;
+  overflow: hidden;;
 }
 
 .description {
-  display: inline-block;
   position: absolute;
   align-items: center ;
   top: 100%;
@@ -77,14 +83,12 @@
   left: 25%;
   margin-right: auto;
   margin-left: auto;
-  font-family: 'Roboto', sans-serif;
   min-width: 800px;
 }
 
 .description p {
-
+  font-family: 'Roboto', sans-serif;
   font-size: 40px;
-
 }
 
 .skills {
