--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -27,10 +27,9 @@
 }
 
 .page_container {
-  position: relative;
-  display: flex;
-  flex-direction: column;
+  position: absolute;
   min-height: 100vh;
+  margin: 0 auto;
 }
 
 
