--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -92,15 +92,9 @@
 
 @media (max-width: 2560px)
 {
-  .description {
-    position: absolute;
-    align-items: center ;
-    top: 100%;
-    width: 100%;
-    left: 25%;
-    margin-right: auto;
-    margin-left: auto;
-    min-width: 800px;
+  .page_container
+  {
+    max-width: 100vw;
   }
 }
 
