--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -27,11 +27,12 @@
 }
 
 .page_container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  position: relative;
+  position: absolute;
+  justify-content: center;
   min-height: 200vh;
-  max-width: 10vw;
+  max-width: vw;
+  top: 50%;
+  left: 50%;
 }
 
 
@@ -92,10 +93,7 @@
 
 @media (max-width: 2560px)
 {
-  .page_container
-  {
-    max-width: 100vw;
-  }
+  
 }
 
 .description p {
